fix vertical-align in css

--- a/statics/css/style.css
+++ b/statics/css/style.css
@@ -1642,7 +1642,7 @@ hr.invis3 {
 .loader {
     display: block;
     margin: 20px auto 0;
-    vertical-align: middle;
+    /*vertical-align: middle;*/
 }
 
 #preloader {
